Support `-XX:+UseCompactObjectHeaders`